frontend/test/should_fail/setmin.grg
rule r
{
	if { set<object>{}.min() != null; }
	
	modify {
	}
}
